tests/cases/memory/ok/nullable-type-pointer.ari
fn main() -> i64 {
  var value: i64 = 5;
  let raw: i64? = (ref mut value) as i64?;
  let missing: i64? = null;
  let opaque: c_void? = null;
  ptr_store(raw, ptr_load(raw) + 7);
  return value;
}
