tests/cases/memory/errors/zone-current-missing-trait-object.ari
trait Render {
  fn render(self, zone: ref mut Zone) -> std::string::String
}

impl Render for i64 {
  fn render(self, zone: ref mut Zone) -> std::string::String {
    return std::fmt::format_value(zone, self);
  }
}

fn main() -> i64 {
  let object: dyn Render = 1i64 as dyn Render;
  let text = object.render();
  return text.len();
}
